
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


struct TYPE_2__ {int s_addr; } ;
struct sockaddr_in {int sin_port; TYPE_1__ sin_addr; int sin_family; } ;
struct sockaddr {int dummy; } ;
typedef int s_in ;


 int AF_INET ;
 int ERR_CONN ;
 int F_SETFL ;
 int O_NONBLOCK ;
 int QUIT (int ) ;
 int SOCK_STREAM ;
 scalar_t__ connect (int,struct sockaddr*,int) ;
 int fcntl (int,int ,int ) ;
 int getip (char*) ;
 int htons (int) ;
 int memset (struct sockaddr_in*,char,int) ;
 int sleep (int) ;
 int sock ;
 int socket (int ,int ,int ) ;

int connect_to_host(char * host, int port)
{
    struct sockaddr_in s_in;

    memset( &s_in, '\0', sizeof(struct sockaddr_in) );
    s_in.sin_family = AF_INET;
    s_in.sin_addr.s_addr = getip( host );
    s_in.sin_port = htons( port );
    if ((sock = socket( AF_INET, SOCK_STREAM, 0 )) <= 0)
        QUIT(ERR_CONN);
    if (connect(sock, (struct sockaddr *)&s_in, sizeof(s_in)))
        QUIT (ERR_CONN);



    fcntl(sock, F_SETFL, O_NONBLOCK);
    return (sock);
}
